CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc1

	- The test suite no longer generates a printcap file,
	  which caused problems when testing as the root user
	  (STR #693)
	- The scheduler now updates the accepting state of an
	  implicit class based upon the accepting state of its
	  member printers (STR #697)
	- The pstops filter didn't properly skip leading PJL
	  commands (STR #664)
	- The reinterpret_cast keyword was not highlighted when
	  printing C/C++ source files in prettyprint mode (STR
	  #694)
	- Fixed a segfault problem with some of the client
	  programs (STR #668)
	- When using RunAsUser, the scheduler did not correctly
	  set the ownership of the log files, preventing log
	  file rotation (STR #686)
	- The image filters did not correctly load 1-bit PNG
	  files (STR #687)
	- The pdftops filter did not show all annotation objects
	  in a PDF file (STR #674)
	- The pdftops filter did not print the contents of
	  textual form elements, making it impossible to print a
	  filled-in form (STR #663)
	- Integrated the MacOS X/Darwin USB backend into the
	  CUPS baseline (STR #661)
	- The USB backend incorrectly reported "media tray
	  empty" (STR #660)
	- The scheduler did not use a case-insensitive
	  comparison when checking for group membership, which
	  caused problems with Win9x clients printing via SAMBA
	  (STR #647)
	- The scheduler did not report the addresses associated
	  with certain network errors, making troubleshooting
	  difficult (STR #648, #649)
	- The cupstestppd program did not allow a default choice
	  of "Unknown" as required by the PPD spec (STR #651)
	- The select() buffers are now allocated to be at least
	  as large as sizeof(fd_set) (STR #639)
	- The LPD backend now supports overriding the print job
	  username via the device URI (STR #631)
	- The scheduler did not handle an unknown MIME type when
	  checking for a CGI script (STR #603)
	- Added a timeout optimization to the scheduler's main